force-app/main/default/objects/Purchase_Order_1__c/Purchase_Order_1__c.object-meta.xml
<CustomObject>
    <label>Purchase Order 1</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Purchase Order #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Object Label</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>