force-app/main/default/objects/Purchase_Order_1__c/fields/Business__c.field-meta.xml
<CustomField>
    <fullName>Business__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Business</description>
    <inlineHelpText>Enter the name of the Business</inlineHelpText>
    <label>Business</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Object_Label</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>