force-app/main/default/objects/Purchase_Order_1__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Object Label</relationshipLabel>
    <relationshipName>Purchase_order</relationshipName>
    <type>Lookup</type>
</CustomField>