force-app/main/default/objects/Purchase_Order_1__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Due date for product</description>
    <inlineHelpText>Must be completed by select date.</inlineHelpText>
    <label>Due Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>