force-app/main/default/objects/Purchase_Order_1__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TSGADX__Yes_No</valueSetName>
    </valueSet>
</CustomField>